# qub3d

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
COMPILE/assets/shaders/: shader.frag  shader.vert  vert.spv
assets/shaders/: basic_fragment.frag  basic_fragment.glsl  basic_vertex.glsl  basic_vertex.vert
client/: .gitignore  CMakeLists.txt
client/source/src/: main.cpp
docs/: Doxyfile  README.md
engine/: .gitignore  CMakeLists.txt  README.md
engine/source/include/: gameIOManager.hpp  settingsManager.hpp  types.hpp
engine/source/include/gui/: gameStateManager.hpp
engine/source/include/gui/states/: gameState.hpp  stateMap.hpp
engine/source/include/logging/: logging.hpp
engine/source/src/: gameIOManager.cpp  settingsManager.cpp
engine/source/src/gui/: gameStateManager.cpp
engine/source/src/gui/states/: stateMap.cpp
engine/source/src/logging/: logging.cpp
launcher/: .gitignore  CMakeLists.txt  README.md
launcher/source/include/: globalVars.hpp  launcher.hpp  types.hpp
launcher/source/src/: globalVars.cpp  launcher.cpp  main.cpp
libdeps/: CMakeLists.txt
libdeps/glew/: glew.pc
libdeps/wren/: CMakeLists.txt
libdeps/wren/src/: README.md
modules/cmake/: FindEntt.cmake  FindGLEW.cmake  FindGLM.cmake  FindIMGUI.cmake  FindSDL2.cmake  FindYAML_CPP.cmake
qub3d-engine/: CMakeLists.txt  LICENSE.md
qub3d-engine/include/engine/: common.hpp  os.hpp
qub3d-engine/include/engine/graphics/: window.hpp
qub3d-engine/src/graphics/: window.cpp
qub3d-game/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
qub3d-game/include/qub3d/: chunk.hpp  fly_cam.hpp  imgui.hpp  io.hpp  opengl.hpp  shader_pipeline.hpp  texture.hpp  window.hpp
qub3d-game/source/include/: camera.hpp
qub3d-game/source/include/qub3d/: chunk.hpp  chunk_renderer.hpp  fly_cam.hpp  imgui.hpp  io.hpp  opengl.hpp  shader_pipeline.hpp  window.hpp
qub3d-game/source/src/: camera.cpp  chunk.cpp  chunk_renderer.cpp  fly_cam.cpp  io.cpp  main.cpp  shader_pipeline.cpp  texture.cpp  window.cpp
qub3d-game/src/: chunk.cpp  fly_cam.cpp  imgui.cpp  io.cpp  main.cpp  shader_pipeline.cpp  texture.cpp  window.cpp
renderer/: CMakeLists.txt
renderer/source/include/viking/: IBuffer.hpp  IComputePipeline.hpp  IComputeProgram.hpp  IDescriptor.hpp  IGraphicsPipeline.hpp  IModel.hpp  IModelPool.hpp  IRenderer.hpp  ITextureBuffer.hpp  IUniformBuffer.hpp  IWindow.hpp  SDLWindow.hpp  ShaderStage.hpp  VertexBinding.hpp  VertexBufferBase.hpp
renderer/source/include/viking/opengl/: OpenGLBuffer.hpp  OpenGLGraphicsPipeline.hpp  OpenGLModel.hpp  OpenGLModelPool.hpp  OpenGLRenderer.hpp  OpenGLSDLWindow.hpp  OpenGLTextureBuffer.hpp  OpenGLUniformBuffer.hpp  glad.h
renderer/source/include/viking/vulkan/: IVulkanPipeline.hpp  VulkanBuffer.hpp  VulkanCommon.hpp  VulkanComputePipeline.hpp  VulkanComputeProgram.hpp  VulkanDescriptor.hpp  VulkanInitializers.hpp  VulkanRenderer.hpp  VulkanUniformBuffer.hpp
renderer/source/src/: IBuffer.cpp  IComputePipeline.cpp  IComputeProgram.cpp  IDescriptor.cpp  IGraphicsPipeline.cpp  IModel.cpp  IModelPool.cpp  IRenderer.cpp  ITextureBuffer.cpp  IUniformBuffer.cpp  SDLWindow.cpp
renderer/source/src/opengl/: OpenGL.cpp  OpenGLBuffer.cpp  OpenGLGraphicsPipeline.cpp  OpenGLModel.cpp  OpenGLModelPool.cpp  OpenGLRenderer.cpp  OpenGLSDLWindow.cpp  OpenGLTextureBuffer.cpp  OpenGLUniformBuffer.cpp  glad.c
renderer/source/src/vulkan/: IVulkanPipeline.cpp  VulkanBuffer.cpp  VulkanCommon.cpp  VulkanComputePipeline.cpp  VulkanComputeProgram.cpp  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanInitializers.cpp  VulkanInstance.cpp  VulkanPhysicalDevice.cpp  VulkanRenderer.cpp  VulkanSDLSurface.cpp  VulkanSDLWindow.cpp  VulkanSwapchain.cpp  VulkanUniformBuffer.cpp
server/: CMakeLists.txt
server/assets/shaders/: frag.spv
server/assets/shaders/Compute/: comp.spv
server/source/src/: main.cpp
wren-integration/: .gitignore  CMakeLists.txt
wren-integration/source/include/scripting/: wrenBindings.hpp  wrenhandler.hpp
wren-integration/source/src/: main.cpp
wren-integration/source/src/scripting/: wrenBindings.cpp  wrenhandler.cpp
